plugins {
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java-library'
	id "io.freefair.lombok" version "9.1.0"
	id 'jacoco'
	id "org.flywaydb.flyway" version "11.19.0"
//	id 'org.owasp.dependencycheck' version '9.1.0'
	id "org.sonarqube" version "7.2.1.6560"
//	id 'info.solidsoft.pitest' version '1.15.0'
}

group = 'de.thg'
version = '0.0.7-SNAPSHOT'

dependencies {

	api 'org.springframework.boot:spring-boot-starter-webmvc'
	api 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation libs.springdoc.openapi.starter.webmvc.ui
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

	implementation libs.metadata.extractor
	implementation libs.commons.imaging
	implementation libs.tika.core
	api libs.dependency.check.gradle

	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-mongodb-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation libs.assertj.core
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
//	testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//	testImplementation 'org.testcontainers:mongodb:1.21.3'
	testImplementation libs.rest.assured
}

java {
	toolchain.languageVersion.set(JavaLanguageVersion.of(25))
}

testing {
	suites {

		test {
			useJUnitJupiter()
		}

		integrationTest(JvmTestSuite) {
			dependencies {
				implementation project()
				implementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
				implementation 'org.springframework.boot:spring-boot-testcontainers'
				implementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.2'
				implementation 'org.testcontainers:mongodb:1.21.3'
				implementation 'io.rest-assured:rest-assured:5.5.6'
			}

			targets {
				configureEach {
					testTask.configure {
						shouldRunAfter(test)
					}
				}
			}
		}
	}
}

tasks.named('check') {
	dependsOn(testing.suites.integrationTest)
}

jacocoTestReport {
	reports {
		xml.required
	}
	dependsOn test
}

//pitest {
//	junit5PluginVersion = '1.1.2'
//}

//check.dependsOn dependencyCheckAnalyze

flyway {
	url = 'jdbc:postgresql://localhost:5432/tom'
	user = 'tom'
	password = 'tom'
}

test {
    jvmArgs += [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.util=ALL-UNNAMED",
            "--add-opens=java.base/java.io=ALL-UNNAMED"
    ]
}
